# Team_Techiez_HackTU-

./: README.md  package-lock.json
BackendIDE/: README.md  authMiddleware.js  package-lock.json  package.json  pnpm-lock.yaml  server.js
BackendIDE/.arduinoIDE/localization-cache/bg/: nls.config.bg.json
BackendIDE/.arduinoIDE/localization-cache/cs/: nls.config.cs.json
BackendIDE/.arduinoIDE/localization-cache/de/: nls.config.de.json
BackendIDE/.arduinoIDE/localization-cache/es/: nls.config.es.json
BackendIDE/.arduinoIDE/localization-cache/fr/: nls.config.fr.json
BackendIDE/.arduinoIDE/localization-cache/hu/: nls.config.hu.json
BackendIDE/.arduinoIDE/localization-cache/it/: nls.config.it.json
BackendIDE/.arduinoIDE/localization-cache/ja/: nls.config.ja.json
BackendIDE/.arduinoIDE/localization-cache/ko/: nls.config.ko.json
BackendIDE/.arduinoIDE/localization-cache/nl/: nls.config.nl.json
BackendIDE/.arduinoIDE/localization-cache/pl/: nls.config.pl.json
BackendIDE/.mongodb/mongosh/: 6669a5b7af5c339caba26a12_log  config  update-metadata.json
BackendIDE/controllers/: authController.js
BackendIDE/models/: user.js
BackendIDE/routes/: authRoutes.js
backend/: main.py  pyproject.toml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/HackTuFrontend/: package-lock.json  package.json
frontend/HackTuFrontend/src/: App.jsx  index.css
frontend/src/: App.tsx  CodeEditor.tsx  CourseViewer.tsx  LearningInterface.tsx  TTSComponent.tsx  modules.js
(+11 files in other folders)
